--- a/SmartStock/Views/Profile/Dashboard.cshtml
+++ b/SmartStock/Views/Profile/Dashboard.cshtml
@@ -1,11 +1,40 @@
-﻿@{
+﻿@model IEnumerable<SmartStock.Models.TAlert>
+@{
     ViewBag.Title = "Dashboard";
 }
+<h2>@ViewBag.Title</h2>
 
+<table class="table table-striped table-condensed">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(Model => Model.strAlert)
+        </th>
+        <th>
+            @Html.DisplayNameFor(Model => Model.dtmAlertDate)
+        </th>
 
-<h1>Dashboard</h1>
+        <th>
+            <form action="CreateCard">
+                <input type="submit" value="+" />
+            </form>
+        </th>
 
-<div class="Dashboard">
-    <h2>Literally nothing to put in here right now. </h2>
-    <h2>Everything in this page is reliant on back-end data</h2>
-</div>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.strAlert)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.dtmAlertDate)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "EditCard", new { Card_ID = item.intAlertID })
+
+        @Html.ActionLink("Delete", "DeleteCard", new { Card_ID = item.intAlertID })
+    </td>
+</tr>
+    }
+</table>
