--- a/SmartStock/Views/Profile/EditSupplier.cshtml
+++ b/SmartStock/Views/Profile/EditSupplier.cshtml
@@ -1,79 +1,107 @@
-﻿
+﻿@model SmartStock.Models.Supplier
+
 @{
-    ViewBag.Title = "EditSupplier";
+    ViewBag.Title = "Edit Supplier";
 }
-@model SmartStock.Models.Supplier
 
-<h1>EditSupplier</h1>
+<h2>EditSupplier</h2>
 
-<!--In practice, this page will be preloaded with the information of the supplier the user selected.-->
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.Contact_FirstName)
-        @Html.TextBoxFor(Model => Model.Contact_FirstName)
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>TSupplier</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Supplier_ID)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Company_Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Company_Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Company_Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contact_FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contact_FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contact_FirstName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contact_LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contact_LastName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contact_LastName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contact_Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contact_Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contact_Email, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contact_Address1, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contact_Address1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contact_Address1, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contact_Zip, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contact_Zip, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contact_Zip, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contact_PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contact_PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contact_PhoneNumber, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.URL, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.URL, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.URL, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contact_State, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contact_State, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contact_State, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
+                <button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit </button>
+            </div>
+        </div>
     </div>
-</div>
+}
 
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.Contact_LastName)
-        @Html.TextBoxFor(Model => Model.Contact_LastName)
-    </div>
-</div>
-
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.Contact_Address1)
-        @Html.TextBoxFor(Model => Model.Contact_Address1)
-    </div>
-</div>
-
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.Contact_State)
-        @Html.TextBoxFor(Model => Model.Contact_State)
-    </div>
-</div>
-
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.Contact_Zip)
-        @Html.TextBoxFor(Model => Model.Contact_Zip)
-    </div>
-</div>
-
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.Contact_PhoneNumber)
-        @Html.TextBoxFor(Model => Model.Contact_PhoneNumber)
-    </div>
-</div>
-
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.Contact_Email)
-        @Html.TextBoxFor(Model => Model.Contact_Email)
-    </div>
-</div>
-
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.URL)
-        @Html.TextBoxFor(Model => Model.URL)
-    </div>
-</div>
-
-<div class="item">
-    <div>
-        @Html.LabelFor(Model => Model.Notes)
-        @Html.TextAreaFor(Model => Model.Notes)
-    </div>
-</div>
-
-<form action="Suppliers">
-    <input type="submit" value="Submit" />
-</form>
-
-<form action="Suppliers">
-    <input type="submit" value="Cancel" />
-</form>
