--- a/SmartStock/Views/Profile/EditUser.cshtml
+++ b/SmartStock/Views/Profile/EditUser.cshtml
@@ -1,103 +1,80 @@
 ﻿@model SmartStock.Models.User
-@using (Html.BeginForm(FormMethod.Post))
+
+@{
+    ViewBag.Title = "Edit User";
+}
+
+<h2>EditUser</h2>
+
+@using (Html.BeginForm())
 {
-    if (Model.ActionType == SmartStock.Models.User.ActionTypes.RequiredFieldsMissing)
-    {
-        <div id="content-locked">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-            <span>All fields are required.</span>
+    @Html.AntiForgeryToken()
+    
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.User_ID)
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.First_Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.First_Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.First_Name, "", new { @class = "text-danger" })
         </div>
-    }
-    if (Model.ActionType == SmartStock.Models.User.ActionTypes.InvalidPhoneNumber)
-    {
-        <div id="content-locked">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-            <span>Please enter a valid phone number.</span>
-        </div>
-    }
-    if (Model.ActionType == SmartStock.Models.User.ActionTypes.InvalidEmail)
-    {
-        <div id="content-locked">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-            <span>Please enter a valid email.</span>
-        </div>
-    }
-    if (Model.ActionType == SmartStock.Models.User.ActionTypes.NoRole)
-    {
-        <div id="content-locked">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-            <span>Please select a role.</span>
-        </div>
-    }
-    <div class="center-up">
-        <form action="editUser">
-            <table>
-                <tr>
-                    <td colspan="2" style="text-align: center;">
-                        <h1>Edit User</h1>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table-label">
-                        @Html.LabelFor(Model => Model.First_Name, "First Name:")
-                    </td>
-                    <td colspan="2">
-                        @Html.TextBoxFor(Model => Model.First_Name, new { @autofocus = "autofocus" })
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table-label">
-                        @Html.LabelFor(Model => Model.Last_Name, "Last Name:")
-                    </td>
-                    <td colspan="2">
-                        @Html.TextBoxFor(Model => Model.Last_Name)
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table-label">
-                        @Html.LabelFor(Model => Model.Email, "Email:")
-                    </td>
-                    <td colspan="2">
-                        @Html.TextBoxFor(Model => Model.Email)
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table-label">
-                        @Html.LabelFor(Model => Model.Phone_Number, "Phone Number")
-                    </td>
-                    <td colspan="2">
-                        @Html.TextBoxFor(Model => Model.Phone_Number)
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table-label">
-                        @Html.LabelFor(Model => Model.User_Name, "Username: ")
-                    </td>
-                    <td colspan="2">
-                        @Html.TextBoxFor(Model => Model.User_Name)
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table-label">
-                        @Html.LabelFor(Model => Model.Password, "Password: ")
-                    </td>
-                    <td colspan="2">
-                        @Html.TextBoxFor(Model => Model.Password)
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        @Html.DropDownList("rolename", "Select a Role")
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" style="text-align: center;">
-                        <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-                        <button id="btnEditUser" name="btnSubmit" value="userSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit</button>
-                    </td>
-                </tr>
-            </table>
-        </form>
     </div>
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.Last_Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Last_Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Last_Name, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Phone_Number, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Phone_Number, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Phone_Number, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.User_Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.User_Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.User_Name, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+
+        <div class="col-md-10">
+            @Html.DropDownList("rolename", "Select a Role")
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
+            <button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit </button>
+        </div>
+    </div>
+</div>
 }
+
