center dropdown on signup

--- a/SmartStock/Views/Home/SignUp.cshtml
+++ b/SmartStock/Views/Home/SignUp.cshtml
@@ -88,7 +88,7 @@
                         @Html.TextBoxFor(Model => Model.Password)
                     </td>
                 </tr>
-                <tr>
+                <tr align="center">
                     <td colspan="2">
                         @Html.DropDownList("rolename",
                        (IEnumerable<SelectListItem>)ViewBag.items2,
