--- a/SmartStock/Views/Profile/EditSupplier.cshtml
+++ b/SmartStock/Views/Profile/EditSupplier.cshtml
@@ -20,6 +20,7 @@
             @Html.LabelFor(model => model.Company_Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Company_Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayFor(model => model.Company_Name)
                 @Html.ValidationMessageFor(model => model.Company_Name, "", new { @class = "text-danger" })
             </div>
         </div>
