--- a/SmartStock/Views/Profile/PurchaseLog.cshtml
+++ b/SmartStock/Views/Profile/PurchaseLog.cshtml
@@ -7,22 +7,22 @@
 <table class="table table-striped table-condensed">
     <tr>
         <th>
-            @Html.DisplayNameFor(Model => Model.dtmPurchaseDate)
+            @Html.DisplayName("Purchase Date")
         </th>
         <th>
-            @Html.DisplayNameFor(Model => Model.strProductName)
+            @Html.DisplayName("Product Name")
         </th>
         <th>
-            @Html.DisplayNameFor(Model => Model.monCostPerUnit)
+            @Html.DisplayName("Cost Per Unit")
         </th>
         <th>
-            @Html.DisplayNameFor(Model => Model.intPurchaseAmt)
+            @Html.DisplayName("Purchase Amount")
         </th>
         <th>
-            @Html.DisplayNameFor(Model => Model.TUser.strFirstName)
+            @Html.DisplayName("User")
         </th>
         <th>
-            @Html.DisplayNameFor(Model => Model.TSupplier.strCompanyName)
+            @Html.DisplayName("Supplier")
         </th>
     </tr>
 
