--- a/SmartStock/Views/Home/InitializeInventory.cshtml
+++ b/SmartStock/Views/Home/InitializeInventory.cshtml
@@ -24,7 +24,7 @@
                     <td colspan="2">
                         @Html.DropDownList("location", "Select a Location")
                     </td>
-                </tr>
+                </tr> 
                 <tr>
                     <td colspan="2">
                         @Html.TextBoxFor(model => model.InvCount, new { @placeholder = "Added Amount" })
@@ -40,7 +40,7 @@
                         <button id="btnAddProduct" name="btnSubmit" value="addproduct" class="button-action"><i class="fas fa-user-plus"></i> Add-Product</button>
                     </td>
                     <td colspan="2" style="text-align: center;">
-                        <button id="btnAddProduct" name="btnFinishInit" value="finishinit" class="button-action"><<i class="fa-thin fa-angle-right"></i> Finish</button>
+                        <button id="btnAddProduct" name="btnFinishInit" value="finishinit" class="button-action"><i class="fa-thin fa-angle-right"></i> Finish</button>
                     </td>
                 </tr>
             </table>
