--- a/SmartStock/Views/Shared/_Layout.cshtml
+++ b/SmartStock/Views/Shared/_Layout.cshtml
@@ -19,12 +19,11 @@
 			<span class="mobile-content">Smart Stock</span>
 		</div>
 		<div class="icon-bar">
-			<a id="icon-bar-home" href="~/Home/Index" title="Go to Home"><i class="fa fa-home"></i></a>
-			<a id="icon-bar-profile" href="~/Profile/Index" title="Profile"><i class="fas fa-user-circle"></i></a>
+			<a id="icon-bar-home" href="~/Profile/Dashboard" title="Go to Home"><i class="fa fa-home"></i></a>
 			<a id="icon-bar-users" href="~/Profile/Users" title="Users"><i class="fa-solid fa-users"></i></a>
 			<a id="icon-bar-inventory" href="~/Profile/Inventory" title="Inventory"><i class="fa-solid fa-boxes-stacked"></i></a>
 			<a id="icon-bar-suppliers" href="~/Profile/Suppliers" title="Suppliers"><i class="fa-solid fa-truck"></i></a>
-			<a id="icon-bar-Log" href="~/Profile/PurchaseLog" title="Order Log"><i class="fa-thin fa-list-radio"></i></a>
+			<a id="icon-bar-Log" href="~/Profile/PurchaseLog" title="Order Log"><i class="fa-solid fa-list"></i></a>
 			<a id="icon-bar-signout" href="~/Profile/SignOut" title="Sign Out"><i class="fas fa-sign-out-alt"></i></a>
 		</div>
 		<div id="workspace">
