--- a/SmartStock/Views/Profile/InventoryAdjustment.cshtml
+++ b/SmartStock/Views/Profile/InventoryAdjustment.cshtml
@@ -2,14 +2,13 @@
     ViewBag.Title = "InventoryAdjustment";
 }
 
-@model SmartStock.Models.Inventory
-@*@model IEnumerable<SmartStock.Models.TInventory>*@
+@model IEnumerable<SmartStock.Models.TInventory>
 @using (Html.BeginForm())
 {
     <h1>Inventory Adjustment</h1>
     <div>
-        <button id="btnAudit" name="btnSubmit" value="audit" class="button-action"><i class="fas fa-user-plus"></i> Delivery</button>
-        <button id="btnDelivery" name="btnSubmit" value="delivery" class="button-action"><i class="fas fa-user-plus"></i> Audit</button>
+        <button id="btnAudit" name="btnSubmit" value="audit" class="button-action"><i class="fas fa-user-plus"></i> Audit</button>
+        <button id="btnDelivery" name="btnSubmit" value="delivery" class="button-action"><i class="fas fa-user-plus"></i> Delivery</button>
     </div>
 
     if (ViewBag.flag == 0)
@@ -18,10 +17,10 @@
     }
     if (ViewBag.flag == 1)
     {
-        <h1>Audit goes here</h1>
+        @Html.Partial("Audit");
     }
     if (ViewBag.flag == 2)
     {
-        <h1>Delivery goes here</h1>
+        @Html.Partial("Delivery");
     }
 }
